@startuml
'https://plantuml.com/sequence-diagram


class MainApp {
    main()
    start()
}
class Scene1{
    AddNewClicked()
}
class Scene2{
    SetTitleClicked()
    AddClicked()
    DeleteListClicked()
    OnlyShowCompleteClicked()
    OnlyShowNotCompleteClicked()
    ShowAllClicked()
    SaveExternallyClicked()
    OnClosePressed()
    error()
    RemovePressed()
    ClearPressed()
    DueDateEdited()
    DescriptionEdited()
    CompletedEdited()
    LoadCLicked()
}
class ListObj{
    getDueDate()
    getDescription()
    getCh()
    setDueDate()
    setDescription()
    setCh()
}
javafx.application <|-- MainApp
MainApp <-- Scene1
Scene1 <|-- Scene2
Scene2 <|-- ListObj
@enduml